--- a/copie/index.html
+++ b/copie/index.html
@@ -29,7 +29,7 @@ featured_image: /images/social.jpg
 	<section class="listing">
 		<div class="wrap">
 
-			{% for project in site.projects reversed %}
+			{% for project in site.copie reversed %}
 
 			{% if project.accent_color %}{% capture accent_color %}{{ project.accent_color }}{% endcapture %}{% endif %}
 
@@ -38,7 +38,7 @@ featured_image: /images/social.jpg
 
 				<div class="project__images owl-carousel" style="--accent: {{ accent_color }}">
 					{% for image in project.gallery_images %}
-					<a href="{{ project.url | relative_url }}"><img src="{{ '/images/projects/' | relative_url}}{{ image }}" alt="" class="project__image"></a>
+					<a href="{{ project.url | relative_url }}"><img src="{{ '/images/copie/' | relative_url}}{{ image }}" alt="" class="project__image"></a>
 					{% endfor %}
 				</div>
 
