--- a/formation-rgpd/index.html
+++ b/formation-rgpd/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 overtitle: Made is a Jekyll theme
-title: For designers and web developers
-description: Show off your best work with this beautiful, minimal and customizable portfolio theme.
+title: Formations RGPD
+description: Vous souhaitez vous former au RGPD et maîtriser les règles de protection des données personnelles ? Découvrez notre catalogue de formations en ligne, conçues par des experts certifiés. Que vous soyez débutant ou confirmé, nous vous proposons des modules adaptés à vos besoins et à votre secteur d’activité. Avec nos formations RGPD, vous pourrez comprendre, apprendre et agir pour mettre votre entreprise en conformité et renforcer la confiance de vos clients.
 featured_image: /images/social.jpg
 ---
 
