--- a/formation-rgpd/index.html
+++ b/formation-rgpd/index.html
@@ -16,7 +16,7 @@ featured_image: /images/social.jpg
 		
 		<div class="wrap">
 			<h1 class="post__title">{{ page.title }}</h1>
-			<h2 class="post__subtitle subtitle--light">{{ page.subtitle }}</h2>
+			<h2 class="post__subtitle subtitle--light">{{ page.description }}</h2>
 		</div>
 
 	</header>
